# AI--

./: README.md  dependencies.py  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: b9047015d155_add_user_model_email_code.py
models/: __init__.py  user.py
respository/: user_repo.py
routers/: auth_router.py
schemas/: __init__.py
settings/: __init__.py
